package core;
import util.Object;
public class Forest extends Object{
    public Forest(){
        super("Лес");
        joinstory(getName());
    }

}
