package core;

import util.Object;

public class Robin extends Object {
    public Robin(){
        super("Кристофер Робин");
        joinstory(getName());
    }
}
