package core;

public class layException extends Exception{
    public layException(String string){
        super(string);
    }
}
