package util;

public enum PlanetEnum {
    Луна, Марс, Сатурн, Плутон
}
