package util;

public interface getName {
    String getName();
}
