package util;

public interface getPlanet {
    PlanetEnum getPlanet();
}
